--- a/ecommerce-backend-api/src/main/resources/application.properties
+++ b/ecommerce-backend-api/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=shing0518
 
 server.port=8081
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
